# personal-tracker-notion

./: .dockerignore  .env.sample  .gitignore  CLAUDE.md  Dockerfile  Gemfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/personal-tracker-notion/: SKILL.md
.claude/skills/personal-tracker-notion/references/: poll.md
app/jobs/: task_polling_job.rb  task_update.rb
app/models/: application_model.rb  interval_type.rb  notion_model.rb  task.rb  task_definition.rb
app/services/notion/: recurring_task.rb  task_polling.rb  update_recurring_task_time.rb
config/: app.yml.sample  application.rb  credentials.yml.enc  database.yml  schedule.yml  settings.yml  sidekiq.yml
config/environments/: production.rb
config/initializers/: dotenv.rb  notion.rb  sidekiq.rb
db/: schema.rb
db/migrate/: 20221023025741_create_interval_types.rb  20221023025836_create_task_definitions.rb  20221023100722_create_settings.rb
lib/notion/: database_client.rb
skills/personal-tracker-notion/: SKILL.md
skills/personal-tracker-notion/references/: config.md  recurring.md  setup.md  tasks.md
src/personal_tracker/: cli.py  config.py  logging.py
src/personal_tracker/_defaults/: settings.yml
src/personal_tracker/notion/: blocks.py  client.py  models.py  recurring.py  task_polling.py  task_queries.py
tests/: test_blocks.py  test_cli.py  test_client.py  test_config.py  test_models.py  test_recurring.py  test_task_polling.py  test_task_queries.py
