[project]
name = "personal-tracker-notion"
version = "0.1.1"
description = "CLI poller for a Notion task database — handles recurring tasks, deadline reminders, and upcoming task reminders."
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dateutil>=2.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
personal-tracker = "personal_tracker.cli:main"

[dependency-groups]
dev = [
    "freezegun>=1.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
